2005-01-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/lily-guile-macros.hh: new file.

	* lily/pango-select-scheme.cc (LY_DEFINE): new file.

	* lily/general-scheme.cc: new file. 

	* lily/font-select.cc (get_font_by_design_size): retrieve
	PangoFont for (designsize . "pango-descr") entries.

	* lily/lily-parser-scheme.cc: new file.

	* lily/output-def-scheme.cc: new file.

	* lily/paper-book-scheme.cc: new file.

	* lily/duration-scheme.cc (LY_DEFINE): new file.

	* lily/pitch-scheme.cc:  new file.

	* scm/font.scm (add-cmr-fonts): use real dimens in font selection.

2005-01-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/dimensions.cc (LY_DEFINE): add ly:{inch,cm,mm,bp,pt}.

2005-01-06  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: minor editing.

	* Documentation/user/changing-defaults: minor editing.

	* Documentation/user/examples.itely: add template for
	string quartet part extraction; demonstrates tag.

2005-01-06  Erlend Aasland  <erlenda@gmail.com>

	* Documentation/user/notation.itely: documents
	format-mark-box-letters and format-mark-box-numbers

	* scm/define-context-properties.scm: change comment.

2005-01-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (output-classic-framework): new function:
	dump systems as separate .eps files (without fonts) and write a
	single collecting .tex file.

2005-01-05  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Setting simple songs):
	Correct several errors in the equivalent formulation of
	\addlyrics. 
	(The Lyrics context): Corrected link to the SATB example.

2005-01-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (completize-formats): new function
	(postprocess-output): new function

	* lily/paper-book.cc (classic_output): change calling
	convention. Give basename as first argument. 
	remove Paper_book::post_processing().

	* lily/lily-guile.cc (LY_DEFINE): ly:output-backend, new function.
